src/styles/Navbar.module.css
.NavbarContainer {
    height: 54px;
    background-color: var(--color-light-dark);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
}

.Navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5rem 1rem;
    background-color: var(--color-light-dark);
    color: #fff;
    height: 36px;
    border: 1px solid var(--color-light-dark);;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    max-width: 1200px;
    margin-left: auto;
    margin-right: auto;
}

.Navbar img { 
    height: 40px;
    width: 40px;
}

.TitleContainer h1 {
    font-size: 1.2rem;
    margin: 0;
    margin-left: 5px;
    font-weight: 600;
}

.TitleContainer {
    display: flex;
    align-items: center;
}

.Navbar .NavMenu {
    position: fixed;
    top: 54px;
    left: 0;
    bottom: 0;
    width: 80%;
    max-width: 400px;
    background-color: var(--background-dark);
    border-right: 1px solid var(--color-light-dark);
    border-top: 1px solid var(--color-light-dark);
    list-style: none;
    transition: all 0.5s ease;
    padding: 0;
    margin: 0;
    z-index: 99999;
}


.hide {
    transform: translateX(-100%) !important;
}

.Navbar .NavMenu li {
    padding: 0.5rem 1rem;
    border-bottom: 1px solid var(--color-light-dark);
    transition: all 0.3s ease;
}

.Navbar .NavMenu li:hover {
    background-color: var(--color-light-dark);
    cursor: pointer;
}

